src/test/compile-fail/block-must-not-have-result-res.rs
// error-pattern:mismatched types: expected `()` but found `bool`

resource r(i: int) {
    true
}

fn main() {
}